Removed white-space property that was causing wrapping issues on firefox.

--- a/frontend/assets/stylesheets/components/_packages.scss
+++ b/frontend/assets/stylesheets/components/_packages.scss
@@ -27,7 +27,6 @@ $_package-promo__actions_height: 117px;
         p { margin-bottom: 0; }
     }
     .package-promo__actions {
-        white-space: nowrap;
         margin: rem($gs-gutter / 2) 0;
     }
     .package-promo__actions--multiple {
